"Updated .env file, modified views.py, settings.py, and manage.py files, and updated dependencies in requirements.txt"

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SECRET_KEY=your-secret-key
 DEBUG=True
-ALLOWED_HOSTS=127.0.0.1,your-app.azurewebsites.net
+ALLOWED_HOSTS=127.0.0.1,luxuryintaste-dcchhzghh0hjgpfq.centralindia-01.azurewebsites.net
 
 # Database configuration
 DB_NAME=lit-sql-database
