--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRET_KEY=your-secret-key
-DEBUG=True
+DEBUG=False
 ALLOWED_HOSTS=127.0.0.1,luxuryintaste-dcchhzghh0hjgpfq.centralindia-01.azurewebsites.net
 
 # Database configuration
