--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
 SECRET_KEY=your-secret-key
-DEBUG=False
-ALLOWED_HOSTS=127.0.0.1,luxuryintaste-dcchhzghh0hjgpfq.centralindia-01.azurewebsites.net
-
-# Database configuration
+DEBUG=True
+ALLOWED_HOSTS=localhost,127.0.0.1
 DB_NAME=lit-sql-database
 DB_USER=LITsqlAdmin
 DB_PASSWORD=LIT#54312@luxuryintaste.1
